[gd_scene load_steps=54 format=3 uid="uid://cbyvj756fyetn"]

[ext_resource type="Texture2D" uid="uid://deia6t8ce8hdp" path="res://Assets/Art/Character/minifolks by LYSeeK/Humans/Outline/MiniShieldMan.png" id="1_74wug"]
[ext_resource type="Script" path="res://Scripts/Character/knight_character.gd" id="1_k8s4n"]
[ext_resource type="Script" path="res://Scripts/States/CharacterStateMachine.gd" id="3_uj2vy"]
[ext_resource type="PackedScene" uid="uid://vi6oha8iu5ft" path="res://Scenes/DebugTools/StateLabel.tscn" id="4_atqvy"]
[ext_resource type="Script" path="res://Scripts/States/CharacterIdleState.gd" id="4_r1sqb"]
[ext_resource type="Script" path="res://Scripts/States/CharacterMoveState.gd" id="5_occhi"]
[ext_resource type="Script" path="res://Scripts/States/KnightR.gd" id="6_0r34o"]
[ext_resource type="PackedScene" uid="uid://b5v0euhixnaa1" path="res://Scenes/Components/health_component.tscn" id="7_7beb4"]
[ext_resource type="Script" path="res://Scripts/States/KnightL.gd" id="7_gyndt"]
[ext_resource type="Script" path="res://Scripts/States/KnightSpace.gd" id="8_7kkyu"]
[ext_resource type="PackedScene" uid="uid://ds0gmpcaf3o4c" path="res://Scenes/Components/hurtbox_component.tscn" id="8_cc2di"]
[ext_resource type="Script" path="res://Scripts/States/KnightE.gd" id="9_tjg3w"]
[ext_resource type="Texture2D" uid="uid://bh0gb8tq7x8kc" path="res://Assets/Art/Effects/Weapon slash.png" id="10_y57jf"]
[ext_resource type="Script" path="res://Scripts/Attacks/Weapon Slash.gd" id="11_gmri2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_i7k61"]
atlas = ExtResource("1_74wug")
region = Rect2(0, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e36oj"]
atlas = ExtResource("1_74wug")
region = Rect2(32, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cx8l7"]
atlas = ExtResource("1_74wug")
region = Rect2(64, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ixld"]
atlas = ExtResource("1_74wug")
region = Rect2(96, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ea4og"]
atlas = ExtResource("1_74wug")
region = Rect2(128, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pfajw"]
atlas = ExtResource("1_74wug")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p0tqj"]
atlas = ExtResource("1_74wug")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6cd6y"]
atlas = ExtResource("1_74wug")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_noaae"]
atlas = ExtResource("1_74wug")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wn523"]
atlas = ExtResource("1_74wug")
region = Rect2(128, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eg74q"]
atlas = ExtResource("1_74wug")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xx05w"]
atlas = ExtResource("1_74wug")
region = Rect2(32, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_shnh5"]
atlas = ExtResource("1_74wug")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n8iru"]
atlas = ExtResource("1_74wug")
region = Rect2(96, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ni2n"]
atlas = ExtResource("1_74wug")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hxlb2"]
atlas = ExtResource("1_74wug")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p1kkp"]
atlas = ExtResource("1_74wug")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d8ao0"]
atlas = ExtResource("1_74wug")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u4amo"]
atlas = ExtResource("1_74wug")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d4p8j"]
atlas = ExtResource("1_74wug")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4c8ky"]
atlas = ExtResource("1_74wug")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_71m58"]
atlas = ExtResource("1_74wug")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xou0e"]
atlas = ExtResource("1_74wug")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lea2d"]
atlas = ExtResource("1_74wug")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s5eo8"]
atlas = ExtResource("1_74wug")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cuyn3"]
atlas = ExtResource("1_74wug")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_km00w"]
atlas = ExtResource("1_74wug")
region = Rect2(160, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_2wkft"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i7k61")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e36oj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cx8l7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ixld")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ea4og")
}],
"loop": false,
"name": &"Attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pfajw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p0tqj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6cd6y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_noaae")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_noaae")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_noaae")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_noaae")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_noaae")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wn523")
}],
"loop": false,
"name": &"Block",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eg74q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xx05w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_shnh5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n8iru")
}],
"loop": false,
"name": &"Death",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ni2n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hxlb2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p1kkp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hxlb2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p1kkp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hxlb2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p1kkp")
}],
"loop": false,
"name": &"Hurt",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d8ao0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u4amo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d4p8j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4c8ky")
}],
"loop": true,
"name": &"Idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_71m58")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xou0e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lea2d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s5eo8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cuyn3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_km00w")
}],
"loop": true,
"name": &"Walk",
"speed": 6.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4i4mf"]
size = Vector2(11, 13)

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_boqm3"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/sync = true
properties/0/watch = false
properties/1/path = NodePath("Sprite:animation")
properties/1/spawn = true
properties/1/sync = true
properties/1/watch = false
properties/2/path = NodePath("Sprite:flip_h")
properties/2/spawn = true
properties/2/sync = true
properties/2/watch = false
properties/3/path = NodePath("Projectile Rotation:rotation")
properties/3/spawn = true
properties/3/sync = true
properties/3/watch = false
properties/4/path = NodePath("Health Component:immune")
properties/4/spawn = true
properties/4/sync = true
properties/4/watch = false
properties/5/path = NodePath("Projectile Rotation/Weapon Slash:visible")
properties/5/spawn = true
properties/5/sync = true
properties/5/watch = false
properties/6/path = NodePath("Projectile Rotation/Weapon Slash:animation")
properties/6/spawn = true
properties/6/sync = true
properties/6/watch = false
properties/7/path = NodePath("Projectile Rotation/Weapon Slash:frame")
properties/7/spawn = true
properties/7/sync = true
properties/7/watch = false
properties/8/path = NodePath("Projectile Rotation/Weapon Slash/Area2D/CollisionShape2D:disabled")
properties/8/spawn = true
properties/8/sync = true
properties/8/watch = false
properties/9/path = NodePath("Camera2D:position")
properties/9/spawn = true
properties/9/sync = true
properties/9/watch = false

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_25juu"]
radius = 4.0
height = 12.0

[sub_resource type="AtlasTexture" id="AtlasTexture_1iqvi"]
atlas = ExtResource("10_y57jf")
region = Rect2(0, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jxpkg"]
atlas = ExtResource("10_y57jf")
region = Rect2(32, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_eqaup"]
atlas = ExtResource("10_y57jf")
region = Rect2(64, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_m7xxb"]
atlas = ExtResource("10_y57jf")
region = Rect2(96, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_acei4"]
atlas = ExtResource("10_y57jf")
region = Rect2(128, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_issgv"]
atlas = ExtResource("10_y57jf")
region = Rect2(160, 0, 32, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_l0wbc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1iqvi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jxpkg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eqaup")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m7xxb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_acei4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_issgv")
}],
"loop": false,
"name": &"default",
"speed": 20.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_v5q25"]
radius = 7.26374
height = 28.5272

[node name="Knight" type="CharacterBody2D" groups=["Player"]]
script = ExtResource("1_k8s4n")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_2wkft")
animation = &"Hurt"
autoplay = "Idle"
frame = 6
frame_progress = 1.0

[node name="Hitbox" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0.5, 8.5)
shape = SubResource("RectangleShape2D_4i4mf")

[node name="CharacterStateMachine" type="Node" parent="." node_paths=PackedStringArray("character", "sprite", "initialState")]
script = ExtResource("3_uj2vy")
character = NodePath("..")
sprite = NodePath("../Sprite")
initialState = NodePath("CharacterIdleState")

[node name="CharacterIdleState" type="Node" parent="CharacterStateMachine"]
script = ExtResource("4_r1sqb")

[node name="CharacterMoveState" type="Node" parent="CharacterStateMachine"]
script = ExtResource("5_occhi")

[node name="KnightR" type="Node" parent="CharacterStateMachine" node_paths=PackedStringArray("healthComponent")]
script = ExtResource("6_0r34o")
healthComponent = NodePath("../../Health Component")
canMove = false

[node name="KnightL" type="Node" parent="CharacterStateMachine" node_paths=PackedStringArray("weapon_slash")]
script = ExtResource("7_gyndt")
weapon_slash = NodePath("../../Projectile Rotation/Weapon Slash")
canMove = false
canAttack = false

[node name="KnightSpace" type="Node" parent="CharacterStateMachine"]
script = ExtResource("8_7kkyu")
dashSpeed = 1000.0
canAttack = false

[node name="KnightE" type="Node" parent="CharacterStateMachine" node_paths=PackedStringArray("healthComponent")]
script = ExtResource("9_tjg3w")
healthComponent = NodePath("../../Health Component")
canMove = false
canAttack = false

[node name="StateLabel" parent="." node_paths=PackedStringArray("character") instance=ExtResource("4_atqvy")]
offset_left = -69.0
offset_top = -25.0
offset_right = 86.0
offset_bottom = 1.0
text = "State:"
character = NodePath("../CharacterStateMachine")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_boqm3")

[node name="Health Component" parent="." instance=ExtResource("7_7beb4")]
maxHealth = 10

[node name="Hurtbox Component" parent="." node_paths=PackedStringArray("healthComponent") groups=["Player"] instance=ExtResource("8_cc2di")]
healthComponent = NodePath("../Health Component")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox Component"]
position = Vector2(0, 9)
shape = SubResource("CapsuleShape2D_25juu")
debug_color = Color(0.894118, 0, 0.780392, 0.419608)

[node name="Projectile Rotation" type="Marker2D" parent="."]
position = Vector2(0, 9)

[node name="Weapon Slash" type="AnimatedSprite2D" parent="Projectile Rotation"]
position = Vector2(11, 0)
rotation = -0.895698
sprite_frames = SubResource("SpriteFrames_l0wbc")
autoplay = "default"
frame = 2

[node name="Area2D" type="Area2D" parent="Projectile Rotation/Weapon Slash"]
collision_layer = 2
collision_mask = 2
script = ExtResource("11_gmri2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Projectile Rotation/Weapon Slash/Area2D"]
position = Vector2(-0.936317, 2.03059)
rotation = 1.24107
shape = SubResource("CapsuleShape2D_v5q25")
disabled = true

[node name="Camera2D" type="Camera2D" parent="."]

[connection signal="animation_finished" from="Sprite" to="." method="_on_sprite_animation_finished"]
[connection signal="animation_finished" from="Projectile Rotation/Weapon Slash" to="." method="_on_weapon_slash_animation_finished"]
[connection signal="area_entered" from="Projectile Rotation/Weapon Slash/Area2D" to="." method="_on_area_2d_area_entered"]
